add font awesome icons

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Biproxi Todo App"
     />
+    <script
+    src="https://kit.fontawesome.com/228dfc1a0b.js"
+    crossorigin="anonymous"
+  ></script>
     <title>Biproxi Todo App</title>
   </head>
   <body>
